# ppt-2025-2026

Haskell/1.Sequences/: ppt1.hs
Haskell/2.Crypto/: ppt.hs  recursion_practise.hs
Haskell/3.Macro/: ppt.hs
Haskell/3.Macro/fib_exercise/: better_fib.hs  better_fib.py  fib.mermaid  fib.py
Haskell/4.L/: folding_functions.hs  iterate.hs
Haskell/6.tic-tac-toe/: buy_sell.py  stairs.py
Haskell/haskell_interim/: compress.cabal
Haskell/haskell_interim/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
Haskell/haskell_interim/dist-newstyle/packagedb/ghc-9.4.7/: compress-0.1.0.0-inplace.conf  package.cache
Haskell/haskell_interim/src/: Compress.hs  Examples.hs
Haskell/haskell_interim/src/Data/: Bag.hs  HTree.hs
Haskell/haskell_interim/test/: Tests.hs
